<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_internet"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_receita"
            android:title="@string/menu_receitas" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_gastos"
            android:title="@string/menu_gastos" />
        <item
            android:id="@+id/nav_geralVision"
            android:icon="@drawable/ic_visao"
            android:title="@string/menu_geral" />
    </group>
</menu>
