<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.controlestudio.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.controlestudio.ui.home.HomeFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.controlestudio.ui.receitas.ReceitasFragment"
        android:label="@string/menu_receitas"
        tools:layout="@layout/fragment_receitas" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.controlestudio.ui.gastos.GastosFragment"
        android:label="@string/menu_gastos"
        tools:layout="@layout/fragment_gastos" />
    <fragment
        android:id="@+id/nav_geralVision"
        android:name="com.example.controlestudio.ui.overview.OverviewFrament"
        android:label="@string/menu_geral"
        tools:layout="@layout/fragment_overview" />
</navigation>